# grepr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  error.rs  lib.rs  main.rs  matcher.rs
tests/: cli.rs
tests/expected/: all.the.capitalized  all.the.lowercase.insensitive  bustle.txt.the.lowercase  bustle.txt.the.lowercase.insensitive  dog.recursive  dog.recursive.windows  empty_regex.fox.txt  nobody.txt.insensitive  the.recursive.insensitive  the.recursive.insensitive.windows
